Fixed wide alignment in editor

--- a/resources/scss/blocks/editor/_alignment.scss
+++ b/resources/scss/blocks/editor/_alignment.scss
@@ -7,17 +7,21 @@
 ////
 
 .alignwide:not(.alignfull),
-.alignfull {
+.alignfull,
+[data-align="wide"],
+[data-align="full"] {
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .wp-block.alignwide,
-.wp-block[data-align="wide"] {
-	max-width: calc(100% + 2 * var(--space-xxl));
+.wp-block[data-align="wide"],
+.block-editor-block-list__block[data-align="wide"] {
+	max-width: var(--max-width-md);
 }
 
 .wp-block.alignfull,
-.wp-block[data-align="full"] {
+.wp-block[data-align="full"],
+.block-editor-block-list__block[data-align="full"] {
 	max-width: 100vw;
 }
